--- a/views/component/footer.ejs
+++ b/views/component/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="text-white-50 text-center">
-  <p>Made with ❤️ by <a href="https://twitter.com/fukuball" class="text-white" target="_blank">@fukuball</a></p>
-  <p class="dont-break-out">Donate: 0x17cbD516166720b8c75fE75235Ed0218d9CFDFbe</p>
+  <p>Made with ❤️ by <a href="https://twitter.com/piggieghost" class="text-white" target="_blank">@piggieghost</a></p>
+  <p class="dont-break-out">Donate: 0xD34E4895b17DC281786EeAaf789218d856038060</p>
 </footer>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=<%= ga_code %>"></script>
